--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -26,6 +26,11 @@ body, td, th {
   text-align: right;
 }
 
+.small {
+  font-size: 8px;
+  line-height: 1.6em;
+}
+
 /* リスト設定  */
 ul, li {
   margin: 0;
@@ -87,8 +92,10 @@ header {
 
 /* フッター */
 footer {
+  font-size: 8px;
   max-width: 880px;
   margin: 0 auto;
+  padding: 10px;
 }
 
 @media screen and (min-width: 540px) {
