--- a/assets/css/parts.css
+++ b/assets/css/parts.css
@@ -27,6 +27,7 @@
 
 .toggle_label:after {
   text-align: center;
+  line-height: 1.5rem; /* ON/OFF文字の表示位置が縦中央からズレる場合、ここを調整 */
   content: "OFF";
   position: absolute;
   width: 24px;
@@ -80,7 +81,10 @@
 
 .licence:before {
   white-space: pre-wrap;
-  content: "本シナリオは、「株式会社アークライト」及び「株式会社KADOKAWA」が権利を有する『クトゥルフ神話TRPG』の二次創作物です。\A" "Call of Cthulhu is copyright (C)1981, 2015, 2019 by Chaosium Inc. ;all rights reserved. Arranged by Arclight Inc.\A" "Call of Cthulhu is a registered trademark of Chaosium Inc.\A" "PUBLISHED BY KADOKAWA CORPORATION";
+  content: "本作は、「株式会社アークライト」及び「株式会社KADOKAWA」が権利を有する『クトゥルフ神話TRPG』シリーズの二次創作物です。\A"
+	"Call of Cthulhu is copyright ©1981, 2015, 2019 by Chaosium Inc. ;all rights reserved. Arranged by Arclight Inc.\A"
+	"Call of Cthulhu is a registered trademark of Chaosium Inc.\A"
+	"PUBLISHED BY KADOKAWA CORPORATION　「クトゥルフ神話TRPG」「新クトゥルフ神話TRPG」";
 }
 
 /* 単語置換 */
